# InfraStrike

./: .gitignore  README.md  pyproject.toml
config/: __init__.py  settings.py
src/infrastrike/: __init__.py  main.py  path_utils.py
src/infrastrike/camera/: __init__.py  camera_manager.py
src/infrastrike/detection/: __init__.py  ir_detector.py
src/infrastrike/game/: __init__.py  game_engine.py  score_manager.py  target.py
src/infrastrike/hardware/: __init__.py  gpio_controller.py
src/infrastrike/ui/: __init__.py  display.py  grid.py  hud.py  theme.py
tests/: test_camera.py  test_detection.py  test_game.py  test_hardware.py  test_ui_theme.py
